@@ -5,6 +5,14 @@ SVN $URL: https://svn-ccsm-models.cgd.ucar.edu/tools/genf90/trunk/ChangeLog $
 This file describes what tags were created and why
 ===========================
 Originator: jedwards
+Date: Jan 21, 2014
+Model: genf90
+Version: genf90_140121
+One-line summary: add nctype and ctype data type support
+
+
+===========================
+Originator: jedwards
 Date: Nov 20, 2013
 Model: genf90
 Version: genf90_131120
